labs/7.5/namespace-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-demo
  labels:
    team: training
    gatekeeper-exempt: "true"
