labs/7.5/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-lab
  labels:
    team: training
