labs/7.5/pod-labels-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-labels-allowed
  namespace: gatekeeper-lab
  labels:
    appName: nginx-web
    owner: training-team
spec:
  containers:
    - name: nginx
      image: docker.io/library/nginx:1.25
      ports:
        - containerPort: 80
