labs/7.5/pod-labels-disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-labels-disallowed
  namespace: gatekeeper-lab
  labels:
    env: production
spec:
  containers:
    - name: nginx
      image: docker.io/library/nginx:1.25
      ports:
        - containerPort: 80
