labs/7.5/pod-no-labels-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-labels-demo
  namespace: gatekeeper-demo
  labels:
    env: sandbox
spec:
  containers:
    - name: nginx
      image: docker.io/library/nginx:1.25
