labs/7.5/pod-no-labels-lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-labels-lab
  namespace: gatekeeper-lab
  labels:
    env: production
spec:
  containers:
    - name: nginx
      image: docker.io/library/nginx:1.25
