labs/7.5/pod-repo-disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-repo-disallowed
  namespace: gatekeeper-lab
  labels:
    appName: nginx-public
    owner: training-team
spec:
  containers:
    - name: nginx
      image: registry.k8s.io/pause:3.9
      ports:
        - containerPort: 80
