labs/7.5/constraint-required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-pod-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["gatekeeper-lab"]
  parameters:
    labels:
      - key: owner
        allowedRegex: "^[a-z][a-z0-9-]*$"
      - key: appName
        allowedRegex: "^[a-z][a-z0-9-]*$"
